add img optimisation action

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<p class="text">
 			Hello World!
 		</p>
-		<img src="20230226124117_1.jpg">
+		<img src="img/20230226124117_1.jpg">
 	</div>
 </body>
 
