--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<p class="text">
 			Hello World!
 		</p>
+		<!-- Here is a comment! -->
 		<img src="img/20230226124117_1.jpg">
 	</div>
 </body>
